crates/nanobot-core/tests/compile_fail/mint_token_outside_executor.rs
use nanobot_core::tools::ExecutorToken;

fn main() {
    let _t = ExecutorToken::new();
}
